<resources>
    <string name="app_name">Equiwatch</string>
    <string name="title_activity_maps_equiwatch">Map</string>
    <string name="bt_maps_text">go to maps !</string>
    <string name="title_activity_menu_equiwatch">menuEquiwatch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_chevaux">Mes équidés</string>
    <string name="menu_enclos">Mes enclos</string>
    <string name="menu_capteurs">Mes capteurs</string>
    <string name="menu_parametre">Paramètres</string>
    <string name="bt_quitter">Quitter</string>
    <string name="bt_delimiter_points">Délimiter l\'enclos</string>
    <string name="txt_nb_points">Nombres de points gps de l\'enclos: %d</string>
    <string name="form_empty">Veuillez compléter tous les champs du formulaire</string>

    <string name="capteur_list_title">Liste Capteurs</string>
    <string name="capteur_add_title">Création Capteurs</string>
    <string name="capteur_view_title">Vue Capteurs</string>
    <string name="capteur_update_title">Modification Capteurs</string>
    <string name="capteur_label">Label Capteurs : </string>
    <string name="capteur_type">Type Capteurs : </string>
    <string name="capteur_donnee">Donnée: </string>
    <string name="capteur_information_vide">Vous n\'avez aucun capteur pour le moment, cliquez sur le + pour en ajouter.</string>
    <string name="capteur_information_create">Vous venez de créer le capteur : </string>
    <string name="capteur_information_update">Vous venez de modifier le capteur : </string>
    <string name="capteur_information_delete">Suppression du capteurs : </string>
    <string name="capteur_warning_label">Vous n\'avez pas remplis le label du capteur ! </string>

    <string name="equide_list_title">Liste Equides</string>
    <string name="equide_create_title">Création Equides</string>
    <string name="equide_update_title">Modification Equides</string>
    <string name="equide_view_title">Vue Equides</string>
    <string name="equide_nom">Nom équidé : </string>
    <string name="equide_enclos">Enclos : </string>
    <string name="equide_capteur">Capteurs : </string>
    <string name="equide_information_vide">Vous n\'avez aucun équidés pour le moment, cliquez sur le + pour en ajouter. </string>
    <string name="equide_information_create">Vous venez de créer l\'équidés : </string>
    <string name="equide_information_update">Vous venez de modifier l\'équidés : </string>
    <string name="equide_information_delete">Suppression de l\'équidés : </string>
    <string name="equide_warning_label">Vous n\'avez pas remplis le nom de l\'equide ! </string>

    <string name="enclos_information_vide">Vous n\'avez aucun enclos pour le moment, cliquez sur le + pour en ajouter.</string>
    <string name="enclos_suppression_titre">Alerte avant suppression de l\'enclos</string>
    <string name="enclos_suppression_descriptif">Voulez vous vraiment supprimer l\'enclos ?</string>
    <string name="enclos_label_selction_capteur">Sélectionnez les capteurs que vous voulez ajouter a l\'enclos :</string>
    <string name="enclos_donnees_capteur_thermique">%s °C</string>

    <string name="alerte_delete_title">Alerte avant suppression</string>
    <string name="alerte_delete_message">Voulez vous vraiment supprimer ?</string>

    <string name="btn_update">Modifier</string>
    <string name="btn_create">Créer</string>

    <string name="nom_channel">Alerte</string>
    <string name="nom_channel_gps">Alerte fuite equides</string>
    <string name="description_channel">Les alertes</string>

    <string name="notif_alerte_cheval_descriptif">L\'equidé %s c\'est échappé</string>
    <string name="notif_alerte_temperature_descriptif">La chaleur au niveau de l\'enclos %1$s dépasse les %2$s degrés</string>

    <string name="dialog_map_quitter_message">Voulez vous vraiment annuler la délimitation de l\'enclos ?</string>
    <string name="dialog_map_quitter_titre">Annulation de la délimitation de l\'enclos</string>
    <string name="dialog_map_valider_message">Voulez vous valider la délimitation de l\'enclos ?</string>
    <string name="dialog_map_valider_titre">Valider la délimitation de l\'enclos</string>
</resources>
